<resources>
    <string name="app_name" translatable="false">Final Project</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="todo" translatable="false">TODO</string>
    <string name="continu">Sign In to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="go">Go</string>
    <string name="new_user_sing_up">New User ? SING UP</string>
    <string name="hello">Hello there, Welcome Back</string>
    <string name="signup">SignUp to start your new Journey</string>
    <string name="full_name">Full Name</string>
    <string name="username">Username</string>
    <string name="login">Already Have an account? Login</string>
    <string name="phone_number">Phone Number</string>
    <string name="welcome">Welcome</string>
    <string name="logout">Logout</string>
    <string name="Update">Update</string>
    <string name="full_name_fir">Full Name :</string>
    <!-- TODO: Remove or change this placeholder text -->
     <string name="data_edit_screen">Data edit screen</string>
    <string name="transmission">Transmission :</string>
    <string name="nav_system">Nav System :</string>
    <string name="minimum_age">Minimum age :</string>
    <string name="car_rental_app" translatable="false">Car rental app</string>
    <string name="cars_rent" translatable="false">Cars Rent</string>
    <string name="welcome_name">welcome_name</string>
</resources>