<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

     android:background="#FDFDFD"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragment.UpdateFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
          android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"

        >

        <ImageView
            android:id="@+id/logoImage"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/bulls_rent_logo_white"
            android:transitionName="imageLogo" />

        <TextView
            android:id="@+id/textLogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/bangers"
            android:text="@string/data_edit_screen"
            android:textColor="@color/black"
            android:textSize="40sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/updName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/full_name">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/updusername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                app:counterEnabled="true"
                app:counterMaxLength="15">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColorHint="#78909C" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/updEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/updPhoneNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/updBtn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/black"
            android:text="@string/Update"
            android:textColor="@color/white"
          />



    </androidx.appcompat.widget.LinearLayoutCompat>
</FrameLayout>