<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FDFDFD"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">


    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:contentDescription="@string/todo"
        android:scaleType="centerCrop"
        android:src="@drawable/bulls_rent_logo_white"
        android:transitionName="imageLogo"
       android:layout_marginBottom="80dp"     />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"

        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="8dp"
            android:text="@string/phone_number"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvPhpne"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"

        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="8dp"
            android:text="@string/username"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvusername"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginBottom="10dp"

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="8dp"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvemail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_marginBottom="10dp"

        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="8dp"
            android:text="@string/full_name"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvFullName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnUpdate"
        android:layout_marginBottom="10dp"

        style="@style/TextAppearance.MaterialComponents.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#000000"
        android:text="@string/Update"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_marginTop="10dp"

        android:id="@+id/btnlogout"
        style="@style/TextAppearance.MaterialComponents.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#000000"
        android:text="@string/logout"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />
</LinearLayout>